@@ -16,7 +16,6 @@ class Regex {
   
   has re2 : Regex::Re2;
   has captures : ro string[];
-  has replaced_count : ro int;
   
   static method new : Regex ($pattern : string, $flags : string = undef) {
     
@@ -293,8 +292,6 @@ class Regex {
       my $match_length = $regex_match->match_length;
       
       $string_buffer->replace($match_start, $match_length, $replace_string);
-      
-      $self->{replaced_count} = $match_count;
       
       unless ($global) {
         last;
